config/samples/gateway_v1_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: default
spec:
  gatewayClassName: flareway
  infrastructure:
    parametersRef:
      group: flareway.bhyoo.com
      kind: CloudflareTunnel
      name: public
  listeners:
  - name: web
    hostname: app.example.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
